--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
@@ -189,7 +189,7 @@
                                
                                  
                                     <div tabIndex="-1" data-bind="attr: {id: 'second_toolbar_'+$data['name']}" class="oj-offcanvas-end" style="width:150px">
-                                        <div data-bind="click: $parent.empBasicInfoOpen" class="oj-swipetoreveal-more">
+                                        <div data-bind="click: $parents[1].empBasicInfoOpen" class="oj-swipetoreveal-more">
                                             <div class="oj-flex-bar" style="height:100%">
                                                 <div class="oj-flex-bar-center-absolute">
                                                     <div class="oj-flex oj-sm-flex-direction-column">
