--- a/OracleJETApplication-V-2/scss/oj-override.scss
+++ b/OracleJETApplication-V-2/scss/oj-override.scss
@@ -929,7 +929,7 @@ a.addEmp{
         }
     }
 }
-#empBasicDialogWindow {
+#empBasicDialogWindow, #laborDialogWindow {
     #status{
         text-align: center;
     }
